--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,8 @@
 [functions]
   node_bundler = "esbuild"
 
+[[redirects]]
+  force = true
+  from = "/*"
+  status = 200
+  to = "/.netlify/functions/:splat"
